<resources>
    <string name="app_name">Smart kitchen</string>
    <string name="soup">Leves</string>
    <string name="mainFood">Főétel</string>
    <string name="dessert">Desszert</string>
    <string name="belepes">Belépés</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="jelszo">jelszó</string>
    <string name="email">email</string>
    <string name="jelszoUjra">jelszó újra</string>
    <string name="vendeg_haztartasok">Vendég háztartások</string>
    <string name="haztartasaim">Háztartásaim</string>
    <string name="uj_haztartas_neve">Új háztartás neve</string>
    <string name="elkeszites">Elkészítés:</string>
    <string name="uj_recept">Új recept</string>
    <string name="recept_neve">recept neve</string>
    <string name="elkeszitesi_ido">Elkészítési idő:</string>
    <string name="mennyiseg">Mennyiség:</string>
    <string name="hozzavalok">Hozzávalók:</string>
    <string name="mentes">Mentés</string>
    <string name="haztartas_neve">Háztartás neve:</string>
    <string name="haztartas_torlese">Háztartás törlése</string>
    <string name="haztartas_tagjai">Háztartás tagjai:</string>
    <string name="valaki_email_hu">valaki@email.hu</string>
    <string name="uj_tag_hozzaadasa">Új tag hozzáadása</string>
    <string name="nev_mentese">Név mentése</string>
    <string name="haztartas_tulajdonosa">Háztartás tulajdonosa:</string>
    <string name="megsem">Mégsem</string>
    <string name="settings_password_text">Írja be a jelszavát, ha törölni szeretné a háztartást!</string>
    <string name="uj_hozzavalo">Új hozzávaló</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="beallitasok">Beállítások</string>
    <string name="help">help</string>
    <string name="_25_perc">25 perc</string>
    <string name="reccept_modositasa">Recept módosítása</string>
    <string name="recept_torlese">Recept törlése</string>
    <string name="hozzavalo_neve">Hozzávaló neve:</string>
    <string name="liszt">liszt</string>
    <string name="_500">500</string>
    <string name="vonalkod">Vonalkód:</string>
    <string name="vonalkod_olvasas">Vonalkód olvasás</string>
    <string name="_123456789">123456789</string>
    <string name="beolvas">Vonalkód beolvasás</string>
    <string name="vonalkodok">Vonalkódok:</string>
    <string name="hozzavalo_modositasa">Hozzávaló módosítása</string>
    <string name="torles_az_adatbazisbol">Törlés az adatbázisból</string>
    <string name="fozes">Főzés</string>
    <string name="email_">email:</string>
    <string name="jelszo_modositasa">Jelszó módosítása</string>
    <string name="jelszo_">jelszó:</string>
    <string name="regi_jelszo">régi jelszó</string>
    <string name="jelszo_modositasa_">jelszó módosítása:</string>
    <string name="ertesites_engedelyezett_eszkozok">Értesítés engedélyek:</string>
    <string name="ertesitesek_engedelyezese_erre_az_eszkozre">Értesítések engedélyezése erre az eszközre</string>
    <string name="bevasarlo_lista">Bevásárló lista</string>
</resources>