<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email_" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/valaki_email_hu" />

        </LinearLayout>

        <Button
            android:id="@+id/updatePasswordFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:onClick="updatePasswordForm"
            android:text="@string/jelszo_modositasa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"/>

        <LinearLayout
            android:id="@+id/updatePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordFormButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jelszo_modositasa_"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/oldPasswordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/regi_jelszo"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/jelszo"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <EditText
                android:id="@+id/passwordAgainEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/jelszoUjra"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/updatePasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"
                    android:onClick="updatePassword"
                    android:text="@string/jelszo_modositasa" />

                <Button
                    android:id="@+id/updatePasswordBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:onClick="updatePasswordBack"
                    android:text="@string/megsem" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ertesites_engedelyezett_eszkozok"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordLayout"/>

        <LinearLayout
            android:id="@+id/notificationTokensLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


        </LinearLayout>

        <Button
            android:id="@+id/notificationEnableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:onClick="notificationEnable"
            android:text="@string/ertesitesek_engedelyezese_erre_az_eszkozre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationTokensLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>