<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".pantry.NewPantryItem"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/newPantryItemNamelinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/newPantryItemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hozzavalo_neve" />

        <EditText
            android:id="@+id/newPantryItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/liszt"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Spinner
        android:id="@+id/newPantryItemWhereSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/pantry_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPantryItemNamelinearLayout" />

    <LinearLayout
        android:id="@+id/newPantryItemQuantitylinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPantryItemWhereSpinner">

        <TextView
            android:id="@+id/newPantryItemQuantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mennyiseg" />

        <EditText
            android:id="@+id/newPantryItemQuantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/_500"
            android:inputType="numberDecimal"
            android:minWidth="50dp" />

        <Spinner
            android:id="@+id/newPantryItemQuantityUnitSpinner"
            android:layout_width="wrap_content"
            android:entries="@array/ingredient_quantity_units_short"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/vonalkodokTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vonalkodok"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPantryItemQuantitylinearLayout" />

    <LinearLayout
        android:id="@+id/newPantryItemBarcodeslinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vonalkodokTextView">


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:onClick="barcodeScanner"
        android:text="@string/beolvas"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPantryItemBarcodeslinearLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:onClick="saveNewPantryItem"
        android:text="@string/mentes"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>