<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/haztartas_neve"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/householdNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:text="" />

            <ImageButton
                android:id="@+id/EditHouseholdNameimageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:onClick="enableHouseholdNameEdit"
                app:srcCompat="@drawable/edit_icon" />

        </LinearLayout>

        <Button
            android:id="@+id/nameSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nev_mentese"
            android:visibility="gone"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:onClick="nameSave"
            />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/settings_password_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameSaveButton" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/jelszo"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

            <Button
                android:id="@+id/DeleteHouseholdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:onClick="DeleteHousehold"
                android:text="@string/haztartas_torlese"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/DeleteHouseholdButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:onClick="DeleteHouseholdCancel"
                android:text="@string/megsem"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/haztartas_tulajdonosa"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ownerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/haztartas_tagjai"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


        <LinearLayout
            android:id="@+id/householdMembersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/newHouseholdMemberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/householdMembersLayout">

            <Button
                android:id="@+id/newHouseholdMemberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:onClick="newHouseholdMemberShow"
                android:text="@string/uj_tag_hozzaadasa"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/emailAddressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:visibility="gone"
                android:hint="@string/valaki_email_hu"
                android:inputType="textEmailAddress" />

            <ImageButton
                android:id="@+id/addHouseholdMemberImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:background="@color/transparent"
                android:onClick="addHouseholdMember"
                app:srcCompat="@drawable/add" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>